--- a/style.css
+++ b/style.css
@@ -10,11 +10,30 @@
 }
 
 body {
-  background-color: rgb(16, 15, 15);
+  height: 100dvh;
+  background-image: radial-gradient(gray, black);
+ 
   color: white;
 }
 
+
+.bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image:url('fundo.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.7; 
+  z-index: -1;  
+  flex: 1;
+}
+
 .container {
+  z-index: 1;
   height: 100dvh;
   width: 100%;
   display: flex;
@@ -86,7 +105,7 @@ body {
 }
 
 .chat__form {
-  background-color: rgb(19, 19, 19);
+  background-color: rgba(19, 19, 19, 0.713);
   padding: 15px 20px;
   display: flex;
   align-items: center;
