--- a/style.css
+++ b/style.css
@@ -10,28 +10,12 @@
 }
 
 body {
-  background-color: rgb(31, 31, 31);
+  background-color: rgb(16, 15, 15);
+  overflow-x: hidden;
   color: white;
 }
 
-
-.bg {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image:url('fundo.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  opacity: 0.7; 
-  z-index: -1;  
-  flex: 1;
-}
-
 .container {
-  z-index: 1;
   height: 100dvh;
   width: 100%;
   display: flex;
@@ -103,7 +87,7 @@ body {
 }
 
 .chat__form {
-  background-color: rgba(19, 19, 19, 0.713);
+  background-color: rgb(19, 19, 19);
   padding: 15px 20px;
   display: flex;
   align-items: center;
@@ -160,6 +144,32 @@ body {
   margin-top: -10px;
 }
 
+@keyframes fadeMessageSelf {
+  0% {
+    margin-right: -200px;
+    opacity: 0;
+    transform: scale(0.5);
+  }
+  100% {
+    margin-right: 0;
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes fadeMessageOther {
+  0% {
+    margin-left: -200px;
+    opacity: 0;
+    transform: scale(0.5);
+  }
+  100% {
+    margin-left: 0;
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
 .message--self {
   background-color: rgb(247, 247, 247);
   color: black;
@@ -168,6 +178,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  animation: fadeMessageSelf 0.3s ease-in-out;
 }
 
 .message--other {
@@ -175,6 +186,7 @@ body {
   color: white;
   border-radius: 0px 10px 10px 10px;
   align-self: flex-start;
+  animation: fadeMessageOther 0.3s ease-in-out;
 }
 
 .message--sender {
@@ -182,4 +194,28 @@ body {
   margin-bottom: 15px;
   font-weight: 700;
   color: aquamarine;
+}
+
+/*BARRA DE ROLAGEM*/
+
+/* Estilo da barra de rolagem inteira */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Fundo da barra (trilho) */
+::-webkit-scrollbar-track {
+  background: #1e1e1e; /* Cor do fundo (dark) */
+}
+
+/* Barra de rolagem (thumb) */
+::-webkit-scrollbar-thumb {
+  background-color: #555; /* Cor da barra */
+  border-radius: 10px;
+  border: 2px solid #1e1e1e; /* Borda da barra combinando com o fundo */
+}
+
+/* Barra no hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #888;
 }
