--- a/style.css
+++ b/style.css
@@ -10,12 +10,28 @@
 }
 
 body {
-  background-color: rgb(16, 15, 15);
+  background-color: rgb(31, 31, 31);
   overflow-x: hidden;
   color: white;
 }
 
+.bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("fundo.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.7;
+  z-index: -1;
+  flex: 1;
+}
+
 .container {
+  z-index: 1;
   height: 100dvh;
   width: 100%;
   display: flex;
